<resources>
    <string name="app_name">Task-it</string>
    <string name="Home">Home</string>
    <string name="ComTask">Com-Task</string>
    <string name="Profile">Profile</string>
    <string name="Task">Update Task</string>
    <string name="CancelUpdate">Cancel Update</string>
    <string name="search">Search</string>
    <string name="task_end">end of tasks</string>
    <string name="my_task">My Task</string>
    <string name="open_clock">Select Date/Time</string>
    <string name="time_display">your time will display here</string>
    <string name="logout_app">Logout</string>
    <string name="welcome_to_task_manager_pro">Welcome To Task-it</string>
    <string name="hhhk">image</string>
    <string name="manage_your_time_like_never_before">Manage your time like never before</string>
    <string name="edit">Edit Your Task</string>
    <string name="timer">Timer</string>
    <string name="cancel_timer">Cancel</string>
    <string name="start_timer">Start</string>
    <string name="title">Title</string>
    <string name="what_you_up_to">What you up to?</string>
    <string name="short_note">Short note</string>
    <string name="write_something">write something..</string>
    <string name="timeline">Timeline</string>
    <string name="new_here_sign_up">New here? Sign up</string>
    <string name="rate_app">Rate App</string>
    <string name="send_feeback">Send Feeback</string>
    <string name="tell_a_friend">Tell a friend</string>
    <string name="about_app">About App</string>
    <string name="emptyViewTip2">here</string>
    <string name="emptyViewTip1">All tasks that you complete will show</string>
    <string name="emptyViewTip">No Task Completed Yet</string>
    <string name="tip2">to create a new task</string>
    <string name="tip1">Smash the plus icon at the bottom right corner</string>
    <string name="empty_rec_text">Zero Tasks</string>
    <string name="aboutparagraph">Task-it was created to help it\'s users organize their daily schedules, because  initially, we may tend to forget our plan for a specific day/time, so Task-it helps the user to schedule a particular date/time and set a reminder for it so that the user can be notified when the time reaches and also display a list of completed schedules. Created by crushTech.inc.</string>
    <string name="users_image">users_image</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_us">Contact us</string>
    <string name="important_warning">Important Warning</string>
    <string name="positive">OK</string>
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">if you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support! </string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind me Later</string>
    <string name="rate_dialog_no">No,Thanks</string>

</resources>
