<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EDED"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">


    <RelativeLayout
        android:id="@+id/profileListItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/image_and_userdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/avatarIv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:background="#A5A0A0"
                    android:contentDescription="@string/users_image"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/User_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="7dp"
                        android:fontFamily="sans-serif-black"
                        android:text="Username"
                        android:textAllCaps="true"
                        android:textColor="@color/Black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/User_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="sans-serif-black"
                        android:text="Email Address"
                        android:textColor="@color/green"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_and_userdetails"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/saveUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/bgputask"
                android:fontFamily="@font/averia_libre_bold"
                android:text="Save"
                android:textColor="@color/yellow"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ree1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ree"
            android:background="@color/white">

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="14dp"
                android:drawableStart="@drawable/work"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="15dp"
                android:fontFamily="sans-serif-black"
                android:padding="2dp"
                android:text="@string/about_app"
                android:textColor="@color/Black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ree2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ree1"
            android:layout_marginTop="2dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/shareAndSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="15dp"
                android:drawableStart="@drawable/loveletter"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="13dp"
                android:fontFamily="sans-serif-black"
                android:padding="2dp"
                android:text="@string/tell_a_friend"
                android:textColor="@color/Black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ree3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ree2"
            android:layout_marginTop="10dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/sendFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="14dp"
                android:drawableStart="@drawable/heart"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="14dp"
                android:fontFamily="sans-serif-black"
                android:padding="2dp"
                android:text="@string/send_feeback"
                android:textColor="@color/Black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ree4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ree3"
            android:layout_marginTop="2dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/RateApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="14dp"
                android:drawableStart="@drawable/like"
                android:drawablePadding="14dp"
                android:fontFamily="sans-serif-black"
                android:padding="2dp"
                android:text="@string/rate_app"
                android:textColor="@color/Black"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>